# caja-sound-converter

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  nautilus-sound-converter.doap
data/: Makefile.am  caja-sound-converter.schemas.in  main.glade  main.ui  main.xml  nautilus-sound-converter.schemas.in  progress.glade  progress.ui  progress.xml
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  gl.po  he.po  hu.po  it.po  lv.po  nb.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  nsc-converter.c  nsc-converter.h  nsc-error.c  nsc-error.h  nsc-extension.c  nsc-extension.h  nsc-gstreamer.c  nsc-gstreamer.h  nsc-module.c  nsc-progress.c  nsc-progress.h  nsc-xml.c  nsc-xml.h
